--- a/components/SearchBar/styles.module.css
+++ b/components/SearchBar/styles.module.css
@@ -37,3 +37,16 @@
   font-size: 1.2rem;
   padding: 0.5rem;
 }
+
+.searchBarInput button {
+  height: 30px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.searchBarInput button:hover {
+  background-color: #f5f5f5;
+}
